--- a/Rocket.toml
+++ b/Rocket.toml
@@ -21,7 +21,7 @@ log = "normal"
 limits = { forms = 32768, json = 128  }
 
 [production]
-address = "0.0.0.0"
+address = "localhost"
 port = 80
 log = "critical"
 limits = { forms = 32768, json = 128 }
