--- a/Rocket.toml
+++ b/Rocket.toml
@@ -4,9 +4,9 @@
 # The certificate is self-signed. As such, you will need to trust it directly
 # for your browser to refer to the connection as secure. You should NEVER use
 # this certificate/key pair. It is here for DEMONSTRATION PURPOSES ONLY.
-# [global.tls]
-# certs = "private/cert.pem"
-# key = "private/key.pem"
+[global.tls]
+certs = "private/cert.pem"
+key = "private/key.pem"
 
 [development]
 address = "localhost"
@@ -21,7 +21,8 @@ log = "normal"
 limits = { forms = 32768, json = 128  }
 
 [production]
-address = "localhost"
+address = "0.0.0.0"
+# address = "snuf.fi"
 port = 80
 log = "critical"
 limits = { forms = 32768, json = 128 }
